--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.3.1
 dj-database-url==0.5.0
 Django==3.1.3
+django-constance==2.8.0
 django-model-utils==4.0.0
+django-picklefield==3.0.1
 psycopg2==2.8.6
 pytz==2020.4
 sqlparse==0.4.1
