--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.1.3
 django-constance==2.8.0
 django-model-utils==4.0.0
 django-picklefield==3.0.1
+gunicorn==20.0.4
 psycopg2==2.8.6
 pytz==2020.4
 sqlparse==0.4.1
